docs: incorporate design review (preview API, baton contract, support policy)
Address review of the Java 21+ vthread runtime design:

- Add §0.1 platform baseline & preview-API decision: virtual threads are stable
  in Java 21, but StructuredTaskScope/ScopedValue are preview until Java 25.
  Recommend starting on stable APIs (newVirtualThreadPerTaskExecutor + explicit
  context) to avoid --enable-preview; adopt STS/ScopedValue when baseline rises.
- Elevate the "no blocking while holding the baton" invariant to a first-class
  callout; add §3.1 host-external-function contract (all blocking host I/O must
  go through Coop.blocking; unify v1.0.0's sync/async registration).
- Clarify the scheduler is role-changed, not deleted (baton + thread states +
  wake timer + monitor tick + result collection remain).
- Reframe risks: baton-not-released blocking is the dominant risk; pinning is
  secondary. Add a long-baton-hold watchdog idea.
- Make multi (§4) and per-thread context (§5) conditional on the A/B baseline.
- §6: require an explicit, deterministic round-robin order so the existing
  order-sensitive .expected fixtures can be reused; flag where new interleaving
  is expected.
- §10.1: front-load a spike (preview decision -> Coop/scheduler prototype ->
  suspension in recursive interpreter -> async-replay removal -> multi/monitor
  conformance). Add §11 two-line support policy.
- CLAUDE.md: state the frozen line's support scope (security/bugfix only, no new
  features; feature requests go to the modern runtime).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>